# text-rendering

./: .gitignore  Cargo.toml  README.md  shaders.wgsl
src/: basic_render_state.rs  drawrects.rs  fps_counter.rs  gpu_device.rs  input_state.rs  main.rs  terminal.rs  text.rs
